# sot-hrp2

./: .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  NEWS  README.md
src/: CMakeLists.txt  dynamic-hrp2_10.cc  dynamic-hrp2_10.hh  dynamic-hrp2_14.cc  dynamic-hrp2_14.hh  sot-hrp2-10-controller.cpp  sot-hrp2-10-controller.hh  sot-hrp2-14-controller.cpp  sot-hrp2-14-controller.hh  sot-hrp2-controller.cpp  sot-hrp2-controller.hh  sot-hrp2-device.cpp  sot-hrp2-device.hh
src/dynamic_graph/sot/hrp2/: __init__.py  hrp2.py  prologue.py
src/dynamic_graph/sot/hrp2_10/: prologue.py  robot.py  robot.py.in
src/dynamic_graph/sot/hrp2_14/: prologue.py  robot.py  robot.py.in  seqplay.py
